--- a/PCA/PCA/Web.config
+++ b/PCA/PCA/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Server=tcp:p-ca.database.windows.net,1433;Initial Catalog=PCA;Persist Security Info=False;User ID=Chris;Password=Pca1985@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="PCASQL" connectionString="metadata=res://*/Models.Phase.csdl|res://*/Models.Phase.ssdl|res://*/Models.Phase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:p-ca.database.windows.net,1433;initial catalog=PCA;persist security info=False;user id=Chris;password=Pca1985@;multipleactiveresultsets=False;connect timeout=30;encrypt=True;trustservercertificate=False;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
