--- a/PCA/PCA/Views/Web.config
+++ b/PCA/PCA/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="PCA" />
+        <add namespace="PCA.Models"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
