--- a/PCA/PCA/PCA.csproj
+++ b/PCA/PCA/PCA.csproj
@@ -228,6 +228,7 @@
     <Compile Include="Controllers\DailyReportsController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\FileController.cs" />
+    <Compile Include="Controllers\FileSignatureController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InvoiceController.cs" />
     <Compile Include="Controllers\InvoicesController.cs" />
@@ -294,6 +295,14 @@
     <Compile Include="Migrations\201612271931508_12-27test.Designer.cs">
       <DependentUpon>201612271931508_12-27test.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612272331021_filesigs.cs" />
+    <Compile Include="Migrations\201612272331021_filesigs.Designer.cs">
+      <DependentUpon>201612272331021_filesigs.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612272344370_fixfilesig.cs" />
+    <Compile Include="Migrations\201612272344370_fixfilesig.Designer.cs">
+      <DependentUpon>201612272344370_fixfilesig.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\AccountViewModel.cs" />
@@ -309,7 +318,9 @@
     <Compile Include="Models\ContractorTypeUnion.cs" />
     <Compile Include="Models\DailyReport.cs" />
     <Compile Include="Models\File.cs" />
+    <Compile Include="Models\FileSignature.cs" />
     <Compile Include="Models\FileType.cs" />
+    <Compile Include="Models\FileTypeSignature.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Invoice.cs" />
     <Compile Include="Models\Phase.cs" />
@@ -504,6 +515,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Account\" />
+    <Folder Include="Views\FileSignature\" />
     <Folder Include="Views\File\" />
     <Folder Include="Views\System\" />
   </ItemGroup>
@@ -557,6 +569,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612271931508_12-27test.resx">
       <DependentUpon>201612271931508_12-27test.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612272331021_filesigs.resx">
+      <DependentUpon>201612272331021_filesigs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612272344370_fixfilesig.resx">
+      <DependentUpon>201612272344370_fixfilesig.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
