--- a/PCA/PCA/PCA.csproj
+++ b/PCA/PCA/PCA.csproj
@@ -373,6 +373,7 @@
     </Content>
     <Content Include="Metadata\deploymentTemplates\apiappconfig.azureresource.json" />
     <Content Include="apiapp.json" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -534,6 +535,9 @@
     <Content Include="Views\DailyReportPictures\Index.cshtml" />
     <Content Include="Views\DailyReport\CreatePicture.cshtml" />
     <Content Include="Views\DailyReport\PictureIndex.cshtml" />
+    <Content Include="Views\DailyReport\WorkDetail.cshtml" />
+    <Content Include="Views\DailyReport\WorkEdit.cshtml" />
+    <Content Include="Views\DailyReport\WorkDelete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
