--- a/PCA/PCA/PCA.csproj
+++ b/PCA/PCA/PCA.csproj
@@ -239,6 +239,7 @@
     <Compile Include="Controllers\StatesController.cs" />
     <Compile Include="Controllers\SubPhasesController.cs" />
     <Compile Include="Controllers\SystemController.cs" />
+    <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Controllers\WorkItemsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -355,8 +356,10 @@
     <Content Include="Content\GC.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\loginbkrd.jpg" />
+    <Content Include="Content\Images\pcalogo.png" />
     <Content Include="Content\Images\Plann_LetterHead.png" />
     <Content Include="Content\Layout.css" />
+    <Content Include="Content\LayoutTest.css" />
     <Content Include="Content\Login.css" />
     <Content Include="Content\Images\shattered.png" />
     <Content Include="favicon.ico" />
@@ -538,6 +541,8 @@
     <Content Include="Views\DailyReport\WorkDetail.cshtml" />
     <Content Include="Views\DailyReport\WorkEdit.cshtml" />
     <Content Include="Views\DailyReport\WorkDelete.cshtml" />
+    <Content Include="Views\Shared\_LayoutTest.cshtml" />
+    <Content Include="Views\Test\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
