--- a/PCA/PCA/PCA.csproj
+++ b/PCA/PCA/PCA.csproj
@@ -355,7 +355,9 @@
     <Content Include="Content\Budget.css" />
     <Content Include="Content\GC.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\grey_wash_wall.png" />
     <Content Include="Content\Images\loginbkrd.jpg" />
+    <Content Include="Content\Images\mirrored_squares.png" />
     <Content Include="Content\Images\pcalogo.png" />
     <Content Include="Content\Images\Plann_LetterHead.png" />
     <Content Include="Content\LayoutOLD.css" />
@@ -543,6 +545,8 @@
     <Content Include="Views\DailyReport\WorkDelete.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Test\Index.cshtml" />
+    <Content Include="Views\Shared\_LayoutFormOLD.cshtml" />
+    <Content Include="Views\DailyReport\ViewAttachment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
