12-30daily-report-mobile-test

--- a/PCA/PCA/PCA.csproj
+++ b/PCA/PCA/PCA.csproj
@@ -316,6 +316,10 @@
     <Compile Include="Migrations\201612281933238_dailyreportpicture.Designer.cs">
       <DependentUpon>201612281933238_dailyreportpicture.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612301631077_removepicture.cs" />
+    <Compile Include="Migrations\201612301631077_removepicture.Designer.cs">
+      <DependentUpon>201612301631077_removepicture.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\AccountViewModel.cs" />
@@ -625,6 +629,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612281933238_dailyreportpicture.resx">
       <DependentUpon>201612281933238_dailyreportpicture.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612301631077_removepicture.resx">
+      <DependentUpon>201612301631077_removepicture.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
