--- a/PCA/PCA/PCA.csproj
+++ b/PCA/PCA/PCA.csproj
@@ -350,6 +350,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\BudgetDetailReportViewModel.cs" />
     <Compile Include="ViewModels\BudgetPhaseViewModel.cs" />
+    <Compile Include="ViewModels\DailyReportViewModel.cs" />
     <Compile Include="ViewModels\InvoiceViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -384,6 +385,8 @@
     <Content Include="apiapp.json" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\Budget.js" />
+    <Content Include="Scripts\DailyReport.js" />
     <Content Include="Scripts\DataTablesCustomization.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
